[package]
name = "pomegranate"
description = "Pomegranate: a network-based distributed computing framework"
authors = ["Sergio Carmine <me@sergiocarmi.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
aes-gcm-siv = "0.11.1"
bytecheck = "0.7.0"
log = "0.4.21"
rkyv = { version = "0.7.44", features = ["validation"] }
rsa = "0.9.6"
stderrlog = "0.6.0"
tokio = { version = "1.38.0", features = ["full"] }
